--- a/popup/popup.html
+++ b/popup/popup.html
@@ -80,11 +80,27 @@
           </div>
           <h1 class="brand-name">BrowseBack</h1>
         </div>
-        <div class="header-meta">
-          <span class="status-badge">
-            <span class="status-dot"></span>
-            Active
-          </span>
+        <div class="header-actions">
+          <button id="captureNowBtn" class="header-action-btn" title="Capture Now">
+            <svg width="18" height="18" viewBox="0 0 20 20" fill="none">
+              <rect x="3" y="5" width="14" height="11" rx="2" stroke="currentColor" stroke-width="1.5"/>
+              <circle cx="10" cy="10.5" r="2.5" stroke="currentColor" stroke-width="1.5"/>
+              <path d="M7 3h6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </button>
+          <button id="analyticsBtn" class="header-action-btn" title="Analytics">
+            <svg width="18" height="18" viewBox="0 0 20 20" fill="none">
+              <rect x="3" y="13" width="3" height="5" rx="1" stroke="currentColor" stroke-width="1.5"/>
+              <rect x="8.5" y="9" width="3" height="9" rx="1" stroke="currentColor" stroke-width="1.5"/>
+              <rect x="14" y="5" width="3" height="13" rx="1" stroke="currentColor" stroke-width="1.5"/>
+            </svg>
+          </button>
+          <button id="settingsBtn" class="header-action-btn" title="Settings">
+            <svg width="18" height="18" viewBox="0 0 20 20" fill="none">
+              <path d="M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z" stroke="currentColor" stroke-width="1.5"/>
+              <path d="M16.5 10c0-.3 0-.6-.1-.8l1.7-1.4-1.7-2.9-2.1.5c-.4-.3-.8-.6-1.3-.8l-.5-2.1h-3.4l-.5 2.1c-.5.2-.9.5-1.3.8l-2.1-.5-1.7 2.9 1.7 1.4c-.1.3-.1.6-.1.8 0 .3 0 .6.1.8l-1.7 1.4 1.7 2.9 2.1-.5c.4.3.8.6 1.3.8l.5 2.1h3.4l.5-2.1c.5-.2.9-.5 1.3-.8l2.1.5 1.7-2.9-1.7-1.4c.1-.2.1-.5.1-.8z" stroke="currentColor" stroke-width="1.5"/>
+            </svg>
+          </button>
         </div>
       </div>
     </header>
@@ -103,6 +119,11 @@
           placeholder="Search your browsing history..."
           autocomplete="off"
         />
+        <button id="clearSearchBtn" class="search-action-btn" title="Clear" style="display: none;">
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+            <path d="M3 3L13 13M13 3L3 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+          </svg>
+        </button>
         <button id="searchBtn" class="search-action-btn" title="Search" style="display: none;">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
             <circle cx="7" cy="7" r="5" stroke="currentColor" stroke-width="1.5"/>
@@ -116,8 +137,33 @@
         </button>
       </div>
 
-      <!-- Mode Toggles -->
-      <div class="mode-toggles">
+      <!-- Mode Switcher Pills -->
+      <div class="mode-switcher">
+        <button id="browseMode" class="mode-pill active" data-mode="browse">
+          <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <rect x="2" y="3" width="10" height="2" rx="1" fill="currentColor" opacity="0.9"/>
+            <rect x="2" y="6" width="10" height="2" rx="1" fill="currentColor" opacity="0.6"/>
+            <rect x="2" y="9" width="10" height="2" rx="1" fill="currentColor" opacity="0.3"/>
+          </svg>
+          <span>Browse</span>
+        </button>
+        <button id="searchMode" class="mode-pill" data-mode="search">
+          <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <circle cx="6" cy="6" r="4" stroke="currentColor" stroke-width="1.5" fill="none"/>
+            <path d="M9 9L12 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+          </svg>
+          <span>Search</span>
+        </button>
+        <button id="askMode" class="mode-pill" data-mode="ask" disabled>
+          <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <path d="M7 2L8.5 5.5L12 7L8.5 8.5L7 12L5.5 8.5L2 7L5.5 5.5L7 2Z" stroke="currentColor" stroke-width="1.3" stroke-linejoin="round" fill="none"/>
+          </svg>
+          <span>Ask</span>
+        </button>
+      </div>
+
+      <!-- Secondary toggles (for Search mode) -->
+      <div id="searchModeToggles" class="mode-toggles" style="display: none;">
         <button class="mode-chip suggestion-chip" data-mode="recent" data-query="">
           <span class="mode-label">Recent</span>
         </button>
@@ -131,17 +177,11 @@
           </svg>
           <span class="mode-label">Semantic</span>
         </button>
-        <button id="aiModeChip" class="mode-chip suggestion-chip ai-mode" disabled>
-          <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
-            <path d="M6 1L7.5 4.5L11 6L7.5 7.5L6 11L4.5 7.5L1 6L4.5 4.5L6 1Z" stroke="currentColor" stroke-width="1.2" stroke-linejoin="round"/>
-          </svg>
-          <span class="mode-label">AI</span>
-        </button>
       </div>
     </div>
 
-    <!-- Stats -->
-    <div class="stats-grid">
+    <!-- Stats (Hidden for now) -->
+    <div class="stats-grid" style="display: none;">
       <div class="stat-card">
         <div class="stat-value" id="captureCount">0</div>
         <div class="stat-label">Captures</div>
@@ -179,23 +219,63 @@
       <div id="emptyState" class="state-container">
         <div class="empty-illustration">
           <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-            <circle cx="24" cy="24" r="20" stroke="currentColor" stroke-width="2" opacity="0.2"/>
-            <circle cx="24" cy="24" r="12" stroke="currentColor" stroke-width="2" opacity="0.4"/>
+            <path d="M24 8L28 20L40 24L28 28L24 40L20 28L8 24L20 20L24 8Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round" fill="none" opacity="0.4"/>
             <circle cx="24" cy="24" r="4" fill="currentColor" opacity="0.6"/>
           </svg>
         </div>
-        <h3 class="state-title">Start browsing to build your memory</h3>
-        <p class="state-description">BrowseBack captures your tabs automatically every 10 seconds.</p>
+        <h3 class="state-title">Ask anything about your browsing</h3>
+        <p class="state-description">Search your browsing history using natural language. AI will find relevant pages and answer your questions.</p>
         <div class="state-badge">
           <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
             <rect x="3" y="5" width="6" height="5" rx="0.75" stroke="currentColor" stroke-width="1.2"/>
             <path d="M5 5V3.5C5 2.67157 5.67157 2 6.5 2C7.32843 2 8 2.67157 8 3.5V5" stroke="currentColor" stroke-width="1.2"/>
           </svg>
-          <span>Private & Secure</span>
+          <span>100% Local & Private</span>
         </div>
       </div>
 
-      <!-- AI Answer Display -->
+      <!-- AI Chat Interface (Full Page) -->
+      <div id="aiChatContainer" class="ai-chat-fullpage" style="display: none;">
+        <!-- Chat Header with Back Button -->
+        <div class="chat-header-bar">
+          <button id="chatBackBtn" class="chat-back-btn">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M12 4L6 10L12 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+          <div class="chat-header-title">
+            <div class="chat-title-icon">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <path d="M8 2L10 6L14 8L10 10L8 14L6 10L2 8L6 6L8 2Z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <span>AI Chat</span>
+          </div>
+        </div>
+
+        <!-- Messages Container -->
+        <div id="chatMessages" class="chat-messages-fullpage">
+          <!-- Messages will be added here dynamically -->
+        </div>
+
+        <!-- Fixed Input at Bottom -->
+        <div class="chat-input-bar">
+          <input
+            type="text"
+            id="chatInputField"
+            class="chat-input-field"
+            placeholder="Ask a follow-up..."
+            autocomplete="off"
+          />
+          <button id="chatSendBtn" class="chat-send-button">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M2 10L18 3L10 18L9 12L2 10Z" fill="currentColor"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+
+      <!-- AI Answer Display (Legacy - kept for compatibility) -->
       <div id="aiAnswerContainer" class="ai-answer-card" style="display: none;">
         <div class="ai-header">
           <div class="ai-title-row">
@@ -240,23 +320,8 @@
       </div>
     </div>
 
-    <!-- Actions -->
-    <div class="actions-bar">
-      <button id="captureNowBtn" class="action-btn">
-        <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-          <rect x="2" y="4" width="10" height="8" rx="1" stroke="currentColor" stroke-width="1.3"/>
-          <circle cx="7" cy="8" r="2" stroke="currentColor" stroke-width="1.3"/>
-          <path d="M5 2H9" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
-        </svg>
-        <span>Capture Now</span>
-      </button>
-      <button id="settingsBtn" class="action-btn">
-        <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-          <circle cx="7" cy="7" r="2" stroke="currentColor" stroke-width="1.3"/>
-          <path d="M7 1V3M7 11V13M13 7H11M3 7H1M11.5 11.5L10 10M4 4L2.5 2.5M11.5 2.5L10 4M4 10L2.5 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
-        </svg>
-        <span>Settings</span>
-      </button>
+    <!-- Actions Bar - REMOVED (moved to header) -->
+    <div class="actions-bar" style="display: none;">
     </div>
 
     <!-- Settings Panel -->
@@ -332,6 +397,98 @@
               <span>Delete All Captures</span>
             </button>
             <p class="danger-note">This action cannot be undone</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Analytics Panel -->
+    <div id="analyticsPanel" class="settings-overlay" style="display: none;">
+      <div class="settings-panel analytics-panel">
+        <div class="panel-header">
+          <h2 class="panel-title">Analytics</h2>
+          <button id="closeAnalyticsBtn" class="close-btn">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+              <path d="M3 3L13 13M13 3L3 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </button>
+        </div>
+
+        <div class="panel-content">
+          <!-- Quick Stats Banner -->
+          <div class="analytics-banner">
+            <div class="banner-stat">
+              <div class="banner-value" id="analyticsTotal">0</div>
+              <div class="banner-label">Total Captures</div>
+            </div>
+            <div class="banner-divider"></div>
+            <div class="banner-stat">
+              <div class="banner-value" id="analyticsToday">0</div>
+              <div class="banner-label">Today</div>
+            </div>
+            <div class="banner-divider"></div>
+            <div class="banner-stat">
+              <div class="banner-value" id="analyticsWeek">0</div>
+              <div class="banner-label">This Week</div>
+            </div>
+          </div>
+
+          <!-- Activity by Day -->
+          <div class="analytics-section">
+            <div class="section-header">
+              <div class="section-title">Activity (Last 7 Days)</div>
+              <div class="section-subtitle" id="weekTotal">0 captures this week</div>
+            </div>
+            <div id="activityChart" class="activity-chart">
+              <!-- Will be populated dynamically -->
+            </div>
+          </div>
+
+          <!-- Top Sites -->
+          <div class="analytics-section">
+            <div class="section-header">
+              <div class="section-title">Most Visited Sites</div>
+              <div class="section-subtitle" id="uniqueDomains">0 unique domains</div>
+            </div>
+            <div id="topDomainsList" class="top-sites-grid">
+              <!-- Will be populated dynamically -->
+            </div>
+          </div>
+
+          <!-- Peak Hours -->
+          <div class="analytics-section">
+            <div class="section-header">
+              <div class="section-title">Browsing Patterns</div>
+              <div class="section-subtitle" id="peakHourText">Most active hour</div>
+            </div>
+            <div id="hourlyChart" class="hourly-chart">
+              <!-- Will be populated dynamically -->
+            </div>
+          </div>
+
+          <!-- Additional Insights -->
+          <div class="analytics-insights">
+            <div class="insight-card">
+              <!-- <div class="insight-icon">📊</div> -->
+              <div class="insight-content">
+                <div class="insight-label">Storage Used</div>
+                <div class="insight-value" id="analyticsStorage">0 MB</div>
+              </div>
+            </div>
+            <div class="insight-card">
+              <!-- <div class="insight-icon">⏱️</div> -->
+              <div class="insight-content">
+                <div class="insight-label">Oldest Capture</div>
+                <div class="insight-value" id="oldestCapture">-</div>
+              </div>
+            </div>
+            <div class="insight-card">
+              <!-- <div class="insight-icon">🔥</div> -->
+              <div class="insight-content">
+                <div class="insight-label">Busiest Day</div>
+                <div class="insight-value" id="busiestDay">-</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
