Enhance popup UI with new recording indicator and improved styles for transcription display. Added animations for loading and completion states, and updated button styles for better user experience. Adjusted layout and dimensions for various elements to improve overall aesthetics.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -250,15 +250,9 @@
             </svg>
           </button>
           <div class="chat-header-title">
-            <div class="chat-title-icon recording-pulse">
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                <circle cx="8" cy="8" r="6" stroke="currentColor" stroke-width="1.5" fill="none"/>
-                <circle cx="8" cy="8" r="3" fill="currentColor"/>
-              </svg>
-            </div>
             <span id="transcriptionStatus">Transcribing...</span>
           </div>
-          <button id="stopTranscriptionBtn" class="stop-recording-btn">
+          <button id="stopTranscriptionBtn" class="stop-recording-btn" style="display: none;">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
               <rect x="4" y="4" width="8" height="8" rx="1" fill="currentColor"/>
             </svg>
