Update icons and refactor popup UI; replaced SVG icons with PNG images for better performance and visual consistency. Cleaned up CSS by removing unused styles and adjusted HTML structure for improved layout. Enhanced JavaScript to support transcript handling and combined results from screenshots and transcripts for better user experience.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,11 +11,7 @@
   <div id="aiSplashScreen" class="splash-screen">
     <div class="splash-content">
       <div class="splash-icon">
-        <svg width="64" height="64" viewBox="0 0 64 64" fill="none">
-          <circle cx="32" cy="32" r="28" stroke="currentColor" stroke-width="2" opacity="0.2"/>
-          <circle cx="32" cy="32" r="20" stroke="currentColor" stroke-width="2" opacity="0.4"/>
-          <circle cx="32" cy="32" r="12" fill="currentColor" opacity="0.6"/>
-        </svg>
+        <img src="../icons/icon128.png" alt="BrowseBack" width="64" height="64" style="border-radius: 12px;">
       </div>
 
       <h1 class="splash-title">BrowseBack</h1>
@@ -73,10 +69,7 @@
       <div class="header-content">
         <div class="brand">
           <div class="brand-icon">
-            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-              <circle cx="10" cy="10" r="8" stroke="currentColor" stroke-width="1.5"/>
-              <circle cx="10" cy="10" r="3" fill="currentColor"/>
-            </svg>
+            <img src="../icons/icon48.png" alt="BrowseBack" width="20" height="20" style="border-radius: 4px;">
           </div>
           <h1 class="brand-name">BrowseBack</h1>
         </div>
@@ -535,23 +528,6 @@
         </div>
 
         <div class="panel-content">
-          <!-- Quick Stats Banner -->
-          <div class="analytics-banner">
-            <div class="banner-stat">
-              <div class="banner-value" id="analyticsTotal">0</div>
-              <div class="banner-label">Total Captures</div>
-            </div>
-            <div class="banner-divider"></div>
-            <div class="banner-stat">
-              <div class="banner-value" id="analyticsToday">0</div>
-              <div class="banner-label">Today</div>
-            </div>
-            <div class="banner-divider"></div>
-            <div class="banner-stat">
-              <div class="banner-value" id="analyticsWeek">0</div>
-              <div class="banner-label">This Week</div>
-            </div>
-          </div>
 
           <!-- Activity by Day -->
           <div class="analytics-section">
@@ -586,30 +562,6 @@
             </div>
           </div>
 
-          <!-- Additional Insights -->
-          <div class="analytics-insights">
-            <div class="insight-card">
-              <!-- <div class="insight-icon">📊</div> -->
-              <div class="insight-content">
-                <div class="insight-label">Storage Used</div>
-                <div class="insight-value" id="analyticsStorage">0 MB</div>
-              </div>
-            </div>
-            <div class="insight-card">
-              <!-- <div class="insight-icon">⏱️</div> -->
-              <div class="insight-content">
-                <div class="insight-label">Oldest Capture</div>
-                <div class="insight-value" id="oldestCapture">-</div>
-              </div>
-            </div>
-            <div class="insight-card">
-              <!-- <div class="insight-icon">🔥</div> -->
-              <div class="insight-content">
-                <div class="insight-label">Busiest Day</div>
-                <div class="insight-value" id="busiestDay">-</div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
