Update popup styles and dimensions; increased popup size to 40x40 pixels, adjusted brand icon size to 32x32 pixels, and refined SVG elements for better visual consistency. Enhanced text readability with improved line height in the info section.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -69,9 +69,8 @@
       <div class="header-content">
         <div class="brand">
           <div class="brand-icon">
-            <img src="../icons/icon48.png" alt="BrowseBack" width="20" height="20" style="border-radius: 4px;">
+            <img src="../icons/icon48.png" alt="BrowseBack" width="32" height="32" style="border-radius: 6px;">
           </div>
-          <h1 class="brand-name">BrowseBack</h1>
         </div>
         <div class="header-actions">
           <button id="captureNowBtn" class="header-action-btn" title="Capture Now">
@@ -475,25 +474,25 @@
             <div class="section-title">Privacy & Data</div>
             <div class="info-list">
               <div class="info-item">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <svg viewBox="0 0 16 16" fill="none">
                   <path d="M5 8L7 10L11 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span>All data stored locally on your device</span>
               </div>
               <div class="info-item">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <svg viewBox="0 0 16 16" fill="none">
                   <path d="M5 8L7 10L11 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span>No cloud sync or external servers</span>
               </div>
               <div class="info-item">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <svg viewBox="0 0 16 16" fill="none">
                   <path d="M5 8L7 10L11 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span>You own 100% of your data</span>
               </div>
               <div class="info-item">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <svg viewBox="0 0 16 16" fill="none">
                   <path d="M5 8L7 10L11 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span>Works completely offline</span>
