Enhance background and popup functionality; added notification for new captures in background.js and improved UI messaging in popup.js for empty states. Updated popup.html to reflect new branding. Implemented auto-refresh for timeline on new captures and transcripts.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -356,12 +356,12 @@
             </svg>
           </button>
           <div class="chat-header-title">
-            <div class="chat-title-icon">
+            <!-- <div class="chat-title-icon">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                 <path d="M8 2L10 6L14 8L10 10L8 14L6 10L2 8L6 6L8 2Z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
               </svg>
-            </div>
-            <span>AI Chat</span>
+            </div> -->
+            <span>Ask BrowseBack</span>
           </div>
         </div>
 
