Implement fuzzy matching and enhanced search scoring; added Levenshtein distance calculation for improved query relevance in transcripts. Updated popup UI with analytics toggle for daily and weekly views, and refined activity chart rendering. Enhanced search functionality to extract key terms from natural language queries for better accuracy.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -531,8 +531,16 @@
           <!-- Activity by Day -->
           <div class="analytics-section">
             <div class="section-header">
-              <div class="section-title">Activity (Last 7 Days)</div>
-              <div class="section-subtitle" id="weekTotal">0 captures this week</div>
+              <div class="section-title-row">
+                <div>
+                  <div class="section-title" id="activityChartTitle">Activity (Last 7 Days)</div>
+                  <div class="section-subtitle" id="weekTotal">0 captures this week</div>
+                </div>
+                <div class="analytics-toggle">
+                  <button class="analytics-toggle-btn active" data-view="weekly">Weekly</button>
+                  <button class="analytics-toggle-btn" data-view="daily">Daily</button>
+                </div>
+              </div>
             </div>
             <div id="activityChart" class="activity-chart">
               <!-- Will be populated dynamically -->
