Enhance popup functionality with model download feature; added a new button for downloading all models, integrated download progress tracking, and improved error handling for download failures. Updated UI elements for better user experience and ensured fixed height for the popup container to support layout consistency.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -49,7 +49,8 @@
       </div>
 
       <div class="splash-actions" id="splashActions" style="display: none;">
-        <button id="splashContinue" class="splash-btn primary">Continue without AI</button>
+        <button id="splashDownload" class="splash-btn primary">Download All Models (~1.8GB)</button>
+        <button id="splashContinue" class="splash-btn secondary">Continue without AI</button>
         <button id="splashSetup" class="splash-btn secondary">Setup Guide</button>
       </div>
 
