Update popup setup guide with enhanced instructions for downloading AI components; added functionality to copy components URL to clipboard and improved progress tracking during model downloads. Refined UI elements for clarity and user guidance.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -156,15 +156,35 @@
             <div class="step-number">3</div>
             <div class="step-content">
               <h3>Restart Chrome</h3>
-              <p>Click "Relaunch" at the bottom</p>
+              <p>Click "Relaunch" at the bottom of chrome://flags</p>
             </div>
           </div>
 
           <div class="setup-step">
             <div class="step-number">4</div>
             <div class="step-content">
-              <h3>Download Models</h3>
-              <p>Return here and click "Download All Models"</p>
+              <h3>Download AI Components</h3>
+              <p>Open chrome://components and click "Check for update" on:</p>
+              <div class="code-block-wrapper">
+                <code class="code-block" id="componentsUrl">chrome://components</code>
+                <button class="copy-icon-btn" id="copyComponentsBtn" title="Copy to clipboard">
+                  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                  </svg>
+                </button>
+              </div>
+              <ul style="margin-top: 8px; padding-left: 16px; font-size: 13px; color: var(--text-secondary);">
+                <li>Optimization Guide On Device Model</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="setup-step">
+            <div class="step-number">5</div>
+            <div class="step-content">
+              <h3>Return to Extension</h3>
+              <p>Click "Download AI Models" button to complete setup</p>
             </div>
           </div>
         </div>
