Refactor popup styles and content; updated splash note to splash tagline for improved clarity, adjusted button text for better user understanding, and refined layout dimensions for enhanced user experience. Improved margin and padding for better visual consistency across elements.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -48,16 +48,12 @@
       </div>
 
       <div class="splash-actions" id="splashActions" style="display: none;">
-        <button id="splashDownload" class="splash-btn primary">Download All Models (~1.8GB)</button>
+        <button id="splashDownload" class="splash-btn primary">Download AI Model</button>
         <button id="splashSetup" class="splash-btn secondary">Setup Guide</button>
       </div>
 
-      <div class="splash-note">
-        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-          <rect x="4" y="6" width="8" height="7" rx="1" stroke="currentColor" stroke-width="1.5"/>
-          <path d="M6 6V4C6 2.89543 6.89543 2 8 2C9.10457 2 10 2.89543 10 4V6" stroke="currentColor" stroke-width="1.5"/>
-        </svg>
-        <span>All processing happens locally on your device</span>
+      <div class="splash-tagline">
+        Local • Private • Secure
       </div>
     </div>
   </div>
@@ -92,7 +88,7 @@
             <div class="step-number">2</div>
             <div class="step-content">
               <h3>Enable These Flags</h3>
-              <p>Click icon to copy URL, then paste in chrome://flags:</p>
+              <p>Click icon to copy URL</p>
               <ul class="flags-list-with-copy">
                 <li>
                   <span class="flag-name">Prompt API for Gemini Nano</span>
