Add transcript icon styling and update popup HTML structure; modified button SVG for save functionality and improved transcript handling in chat messages. Enhanced layout for better differentiation between transcripts and screenshots.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -355,7 +355,7 @@
             <rect x="3" y="5" width="6" height="5" rx="0.75" stroke="currentColor" stroke-width="1.2"/>
             <path d="M5 5V3.5C5 2.67157 5.67157 2 6.5 2C7.32843 2 8 2.67157 8 3.5V5" stroke="currentColor" stroke-width="1.2"/>
           </svg>
-          <span>100% Local & Private</span>
+          <!-- <span>100% Local & Private</span> -->
         </div>
       </div>
 
@@ -380,7 +380,10 @@
             </button>
             <button id="saveTranscriptHeaderBtn" class="save-transcript-btn" style="display: none;">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                <path d="M2 8L6 12L14 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M13 13H3V3h6l4 4v6z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M9 3v4h4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <rect x="5" y="9" width="6" height="1.5" fill="currentColor"/>
+                <rect x="5" y="11" width="4" height="1.5" fill="currentColor"/>
               </svg>
               <span>Save</span>
             </button>
