Update popup HTML to improve clarity; commented out unused SVG and adjusted badge content to emphasize local and private features.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -351,11 +351,11 @@
         <h3 class="state-title">Ask anything about your browsing</h3>
         <p class="state-description">Search your browsing history using natural language. AI will find relevant pages and answer your questions.</p>
         <div class="state-badge">
-          <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
+          <!-- <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
             <rect x="3" y="5" width="6" height="5" rx="0.75" stroke="currentColor" stroke-width="1.2"/>
             <path d="M5 5V3.5C5 2.67157 5.67157 2 6.5 2C7.32843 2 8 2.67157 8 3.5V5" stroke="currentColor" stroke-width="1.2"/>
-          </svg>
-          <!-- <span>100% Local & Private</span> -->
+          </svg> -->
+          <span>100% Local & Private</span>
         </div>
       </div>
 
